updated admin frontend UI

--- a/pages/adminstuff/1admin.ejs
+++ b/pages/adminstuff/1admin.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('partials/head') %>
     <head><script defer src="/js/admin_js/admin.js"></script>
-     <!-- <link rel="stylesheet" href="/css/admin/admin.css" /> -->
+    
     </head>
 
   <body class="bg-gray">
@@ -32,39 +32,27 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-sm-2 ps-2" id="comment_section">
+            <div class="col-lg-4 col-sm-2 ps-2 badge bg-light">
               <figure class="px-4 py-3 m-0">
-                <span class="h5">Comment Section</span>
+                <span class="h5 text-dark">Comment Section</span>
                 <hr />
-                <blockquote class="blockquote usrquote">
-                  <p>Beautiful country! ♥♥</p>
+
+
+
+                <blockquote class="blockquote usrquote text-secondary">
+                  <p class="pe-5 me-5 pb-2  fw-light text-wrap text-start">Beautiful country! ♥♥</p>
                 </blockquote>
                 <figcaption class="blockquote-footer bg-altdark">
                   5🌟 <cite title="Source Title">Salma -> SIWA</cite>
                 </figcaption>
               </figure>
 
-              <figure class="px-4 py-3 m-0">
-                <blockquote class="blockquote usrquote">
-                  <p>Very lovely indeed 💛</p>
-                </blockquote>
-                <figcaption class="blockquote-footer">
-                  5🌟 <cite title="Source Title">Hussein -> ASWAN</cite>
-                </figcaption>
-              </figure>
-              <figure class="px-4 py-3 m-0">
-                <blockquote class="blockquote usrquote">
-                  <p>Very bad indeed 😢</p>
-                </blockquote>
-                <figcaption class="blockquote-footer">
-                  1🌟 <cite title="Source Title">Hussein -> CAIRO</cite>
-                </figcaption>
-              </figure>
+             
             </div>
 
-            <div class="col-lg-3 col-sm-2 gx-5 m-4" id="earning">
-              <h3 class="row display-6" id="yearly">
-                Yearly Revenue:
+            <div class="col-lg-3 col-sm-2 gx-5 m-4 text-light" id="earning">
+              <h3 class="row display-6 " >
+               Yearly Revenue:
                 <span class="border border-success-subtle rounded-pill"
                   >1200$</span
                 >
