--- a/pages/adminstuff/menus/client/addcli.ejs
+++ b/pages/adminstuff/menus/client/addcli.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('../../partials/head') %>
-  <body>
+  <body class="bg-gray">
     <form class="dark mb-3 px-5" action= return validateNewClient() id="clientForm">
       <div class="mb-3 px-5 pt-5">
         <label for="name" class="form-label">Client Name</label>
