--- a/pages/adminstuff/menus/client/removecli.ejs
+++ b/pages/adminstuff/menus/client/removecli.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../../partials/head') %>
-<body>
-  <form class="dark mb-3 px-5" id="removeClient">
+<body class="bg-gray">
+  <form class="dark mb-3 p-3  " id="removeClient">
     <div class="input-group mb-3 px-5">
         <label class="input-group-text" for="inputGroupSelect01">Client</label>
         <select class="form-select" id="inputGroupSelect01">
@@ -17,7 +17,7 @@
   
 
   <button type="submit" class="btn px-5 py-2 mx-5 my-2 btn-danger" >
-    Delete✖
+    Delete
   </button> 
 </form>
 </body>
