--- a/pages/adminstuff/menus/pkg/addPKG.ejs
+++ b/pages/adminstuff/menus/pkg/addPKG.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('../../partials/head') %>
-  <body>
+  <body class="bg-gray">
     <form class="dark mb-3 px-5" method="POST" action="/admin/addpkg_post">
       <div class="mb-3 px-5 pt-5">
         <div class="form-floating">
