--- a/pages/adminstuff/menus/pkg/editPKG.ejs
+++ b/pages/adminstuff/menus/pkg/editPKG.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('../../partials/head') %>
 <head><script async src="/js/admin_js/editpackage.js"></script></head>
-  <body>
+  <body class="bg-gray">
     <form class="dark mb-3 px-5">
       <div class="input-group mb-3 px-5">
         <label class="input-group-text" for="inputGroupSelect01">Package</label>
