--- a/pages/adminstuff/editpackage.ejs
+++ b/pages/adminstuff/editpackage.ejs
@@ -9,23 +9,27 @@
     <section id="select">
       <div class="container-md">
         <div class="row gx-5 ">
-          <div class="col  py-5">
-            <h3 class="border-bottom text-center py-2">Select the operation</h3>
-            <div class="py-3"></div>
+          <div class="col-12  pt-5 pb-4">
+            <h3 class="border-bottom text-center text-light py-2">Select the operation
+
+              <div class="btn-group-horizantal  ps-3 d-inline-block justify-content-center" role="group">
+                <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio1"  onclick="addPKG() ">
+                <label class="btn btn-outline-primary" for="vbtn-radio1">Add Package</label>
+                <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio2"  onclick="editPKG()">
+                <label class="btn btn-outline-primary" for="vbtn-radio2">Edit Package</label>
+                <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio3"  onclick="removePKG()">
+                <label class="btn btn-outline-primary" for="vbtn-radio3">Remove Package</label>
+                <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio4"  onclick="viewPKG()">
+                <label class="btn btn-outline-primary" for="vbtn-radio4">View Packages</label>
+              </div>
+  
+
+
+
+            </h3>  
+            <div ></div>
             <!-- select what u want here -->
            
-            <div class="btn-group-vertical ps-3 d-flex justify-content-center" role="group">
-              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio1"  onclick="addPKG() ">
-              <label class="btn btn-outline-danger" for="vbtn-radio1">Add Package</label>
-              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio2"  onclick="editPKG()">
-              <label class="btn btn-outline-danger" for="vbtn-radio2">Edit Package</label>
-              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio3"  onclick="removePKG()">
-              <label class="btn btn-outline-danger" for="vbtn-radio3">Remove Package</label>
-              <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio4"  onclick="viewPKG()">
-              <label class="btn btn-outline-danger" for="vbtn-radio4">View Packages</label>
-            </div>
-
-
 
 
 
@@ -40,9 +44,9 @@
 
           </div>
 
-          <div class="col  py-5">
+          <div class="col  ">
             <!-- iframe here -->
-<div class="py-3"></div>
+
 <div class="ratio ratio-1x1">
 
 <iframe frameborder="2" id="frame"  title="myframe" allowfullscreen></iframe>
