--- a/pages/adminstuff/menus/client/viewcli.ejs
+++ b/pages/adminstuff/menus/client/viewcli.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../../partials/head') %>
-<body>
+<body class="bg-gray">
     <% console.log('server'); %>
 <script>console.log('client');</script>
 <% Clients.forEach(element => { %>
