--- a/pages/adminstuff/menus/pkg/removePKG.ejs
+++ b/pages/adminstuff/menus/pkg/removePKG.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('../../partials/head') %>
-  <body>
+  <body class="bg-gray">
     <form class="dark mb-3 px-5">
         <div class="input-group mb-3 px-5">
             <label class="input-group-text" for="inputGroupSelect01">Package</label>
