--- a/pages/adminstuff/menus/pkg/viewPKG.ejs
+++ b/pages/adminstuff/menus/pkg/viewPKG.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <%- include('../../partials/head') %>
-<body>
+<body   class="bg-gray">
     
 <% packs.forEach(element => { %>
  <div class="container">
