--- a/pages/adminstuff/partials/head.ejs
+++ b/pages/adminstuff/partials/head.ejs
@@ -8,7 +8,7 @@
      href="css/admin/admin.css"
     />
   <link rel="stylesheet" href="/css/common/main.css" /> 
-  
+  <link rel="stylesheet" href="/css/admin/admin.css" />
   <!-- bootstrap js -->
   <script
     defer
@@ -16,7 +16,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
- 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <!-- chart js script -->
   <script async src="https://cdn.jsdelivr.net/npm/chart.js"></script>
