--- a/pages/adminstuff/partials/nav.ejs
+++ b/pages/adminstuff/partials/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark border-bottom 1">
+<nav class="navbar navbar-expand-md navbar-light  " >
     <div class="container-sm">
       <b
         class="navbar-toggler border border-0 bg-greyblue"
@@ -13,7 +13,7 @@
         class="collapse navbar-collapse justify-content-center align-center"
         id="main-nav"
       >
-        <ul class="navbar-nav">
+        <ul class="nav nav-tabs">
           <li class="nav-item px-3">
             <a
               href="/admin/analytics"
@@ -26,7 +26,7 @@
                   d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zm406.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 210.7l-57.4-57.4c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L240 221.3l57.4 57.4c12.5 12.5 32.8 12.5 45.3 0l128-128z"
                 />
               </svg>
-              <span class="content">Analytics</span></a
+              <span class="badge rounded-pill text-bg-light p-2" >Analytics</span></a
             >
           </li>
           <li class="nav-item px-3">
@@ -42,7 +42,7 @@
                 />
               </svg>
 
-              <span class="content">Clients</span></a
+              <span class="badge rounded-pill text-bg-light p-2" >Clients</span></a
             >
           </li>
           <li class="nav-item px-3">
@@ -57,7 +57,7 @@
                   d="M290.8 48.6l78.4 29.7L288 109.5 206.8 78.3l78.4-29.7c1.8-.7 3.8-.7 5.7 0zM136 92.5V204.7c-1.3 .4-2.6 .8-3.9 1.3l-96 36.4C14.4 250.6 0 271.5 0 294.7V413.9c0 22.2 13.1 42.3 33.5 51.3l96 42.2c14.4 6.3 30.7 6.3 45.1 0L288 457.5l113.5 49.9c14.4 6.3 30.7 6.3 45.1 0l96-42.2c20.3-8.9 33.5-29.1 33.5-51.3V294.7c0-23.3-14.4-44.1-36.1-52.4l-96-36.4c-1.3-.5-2.6-.9-3.9-1.3V92.5c0-23.3-14.4-44.1-36.1-52.4l-96-36.4c-12.8-4.8-26.9-4.8-39.7 0l-96 36.4C150.4 48.4 136 69.3 136 92.5zM392 210.6l-82.4 31.2V152.6L392 121v89.6zM154.8 250.9l78.4 29.7L152 311.7 70.8 280.6l78.4-29.7c1.8-.7 3.8-.7 5.7 0zm18.8 204.4V354.8L256 323.2v95.9l-82.4 36.2zM421.2 250.9c1.8-.7 3.8-.7 5.7 0l78.4 29.7L424 311.7l-81.2-31.1 78.4-29.7zM523.2 421.2l-77.6 34.1V354.8L528 323.2v90.7c0 3.2-1.9 6-4.8 7.3z"
                 />
               </svg>
-              <span class="content">Packages</span></a
+              <span class="badge rounded-pill text-bg-light p-2">Packages</span></a
             >
           </li>
           <li class="nav-item px-3">
@@ -73,23 +73,24 @@
                 />
               </svg>
 
-              <span class="content">Logout</span></a
+              <span class="badge rounded-pill text-bg-light p-2">Logout</span></a
             >
           </li>
           <li class="nav-item px-3">
+           
             <a
               href="/admin"
               class="link-underline link-underline-opacity-0"
-            >
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 570 570">
+            > 
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 570 570" >
                 <!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                 <path
                   fill="#FFD43B"
                   d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"
                 />
               </svg>
-
-              <span class="content px-2"> Home</span></a
+           
+              <span class="badge rounded-pill text-bg-light p-2 mb-2"> Home</span></a
             >
           </li>
         </ul>
