--- a/pages/adminstuff/partials/head.ejs
+++ b/pages/adminstuff/partials/head.ejs
@@ -7,7 +7,7 @@
       rel="stylesheet"
      href="css/admin/admin.css"
     />
-  <link rel="stylesheet" href="/css/common/main.css" /> 
+  <link rel="stylesheet" href="/css/common/main.min.css" /> 
   <link rel="stylesheet" href="/css/admin/admin.css" />
   <!-- bootstrap js -->
   <script
