--- a/pages/adminstuff/partials/head.ejs
+++ b/pages/adminstuff/partials/head.ejs
@@ -3,15 +3,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title><%= title %></title>
   <!-- bootstrap css -->
-    <link
-      rel="stylesheet"
-     href="css/admin/admin.css"
-    />
+  
   <link rel="stylesheet" href="/css/common/main.min.css" /> 
   <link rel="stylesheet" href="/css/admin/admin.css" />
   <!-- bootstrap js -->
   <script
-    defer
+    async
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
