--- a/pages/main/accManagement.ejs
+++ b/pages/main/accManagement.ejs
@@ -7,7 +7,7 @@
 </head>
 <body> 
     <div class="general">
-    <input type="button" class="btn btn-primary" value="Change Password"> 
+   <a href="changePass.ejs"> <input type="button" class="btn btn-primary" value="Change Password">  </a>
     <input type="button" class="btn btn-primary" value="View History">
     <input type="button" class="btn btn-primary" value="Add Comments">
     </div>
