--- a/pages/main/changePass.ejs
+++ b/pages/main/changePass.ejs
@@ -198,7 +198,7 @@ button:hover {
       <h2>Change Password</h2>
         <div class="input-field">
         <input type="password" name="password" required>
-        <label>Enter your old password</label>
+        <label>Enter your current password</label>
        
       </div>
       <div class="input-field">
@@ -220,7 +220,7 @@ button:hover {
        
       </div>
 
-      <button type="submit">Log In</button>
+      <button type="submit">Submit</button>
       <div class="register">
         <p>Don't have an account? <div style="padding-top: 0.5rem;"></div><a href="/signup">Register</a></p> 
        
@@ -255,7 +255,7 @@ button:hover {
  <!-- footer section starts here  -->
 <%- include('partials/footer') %>
 <!-- footer section ends here  -->
-<script src="/js/main/register.js"></script>
+<script src="/js/main/changePass.js"></script>
 </body>
 
 </html>
