finished ADD_PKG with client/server error checking and messages

--- a/pages/adminstuff/partials/blank.ejs
+++ b/pages/adminstuff/partials/blank.ejs
@@ -3,7 +3,7 @@
     <%- include('head') %>
 <body class="bg-gray">
     
-<div class="display-1 text-green-900">Would you like to do anything else?</div>
+<div class="display-3 text-light">Would you like to do anything else?</div>
 
 
 </body>    
