stars deleted in daily egypt tours section

--- a/pages/main/accManagement.ejs
+++ b/pages/main/accManagement.ejs
@@ -1,15 +1,18 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet"  href="..\public\css\main\style.css">
     <link rel="stylesheet"  href="css\main\AccManagement.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Management</title>
 </head>
+
 <body> 
     <div class="general">
-   <a href="changePass.ejs"> <input type="button" class="btn btn-primary" value="Change Password">  </a>
+   <a href="changePass"> <input type="button" class="btn btn-primary" value="Change Password">  </a>
     <input type="button" class="btn btn-primary" value="View History">
     <input type="button" class="btn btn-primary" value="Add Comments">
     </div>
+    <%- include('partials/footer') %>
 </body>
 </html>
