--- a/pages/main/partials/navbar.ejs
+++ b/pages/main/partials/navbar.ejs
@@ -59,7 +59,7 @@
           <% } else { %> 
             <button class="navLog" ><a href = "register"class="btn btn-primary"> login</a></button>
             <button class="navLog" ><a href = "signup"class="btn btn-primary"> signup</a></button>
-            
+            <button class="navLog" ><a href = "accManagement"class="btn btn-primary"> Manage Account</a></button>
             <% } %>
 
       </div>
